# preferences-rs

./: Cargo.toml
src/: lib.rs
