[package]
name = "preferences"
version = "2.0.0"
authors = ["Andy Barron <AndrewLBarron@gmail.com>"]

description = "Read and write user-specific application data (in stable Rust)"
documentation = "https://docs.rs/preferences"
repository = "https://github.com/AndyBarron/preferences-rs"
readme = "README.md"
keywords = ["preferences", "user", "data", "persistent", "storage"]
license = "MIT"

[dependencies]
app_dirs = "^1.1.1"
serde = "1.0.104"
serde_json = "1.0.44"

[dev-dependencies]
serde_derive = "1.0.104"
